force-app/main/default/objects/clofor_com_cfs__BadDebt__c/fields/clofor_com_cfs__BadDebtAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtAmountFCY__c</fullName>
    <label>Bad Debt Amount(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>