force-app/main/default/objects/clofor_com_cfs__BadDebt__c/fields/clofor_com_cfs__BadDebtAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtAmountLocal__c</fullName>
    <label>Bad Debt Amount(Local)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>