force-app/main/default/objects/clofor_com_cfs__BadDebt__c/fields/clofor_com_cfs__BadDebtEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtEndDate__c</fullName>
    <label>Bad Debt End Date</label>
    <type>Date</type>
</CustomField>