force-app/main/default/objects/clofor_com_cfs__BadDebt__c/fields/clofor_com_cfs__BadDebtStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtStartDate__c</fullName>
    <label>Bad Debt Start Date</label>
    <type>Date</type>
</CustomField>