force-app/main/default/objects/clofor_com_cfs__BadDebt__c/fields/clofor_com_cfs__Debtor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Debtor__c</fullName>
    <label>Debtor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BAD DEBT</relationshipLabel>
    <relationshipName>BadDebt</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>