force-app/main/default/objects/clofor_com_cfs__BadDebt__c/fields/clofor_com_cfs__ExpectedUncollectableAccountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpectedUncollectableAccountFCY__c</fullName>
    <formula>clofor_com_cfs__BadDebtAmountFCY__c *  clofor_com_cfs__ProbabilityOfNotCollecting__c</formula>
    <label>Expected Uncollectable Account(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>